[package]
name = "qurs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"
[dev-dependencies]
[build-dependencies]
bindgen = "0.59.2"
cc = { version = "1.0", features = ["parallel"] }
