[package]
name = "qurs"
version = "0.2.0"
edition = "2018"
license = "MIT"
readme = "./README.md"
description = "Qulacs implementation in Rust"
repository = "https://github.com/QunaSys/qurs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"
superslice="1.0.0"
ordered-float="3.0.0"
[dev-dependencies]
[build-dependencies]
bindgen = "0.60.1"
cc = { version = "1.0", features = ["parallel"] }
